-Trying to fix the overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,11 +30,7 @@ a {
     background: linear-gradient(-45deg, #1D1CE5, #4649FF, #7978FF, #C47AFF);
     background-size: 400% 400%;
     animation: gradient 5s ease infinite;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    margin: 0;
-    margin: 0;
+    overflow: auto;
     /* border: 1px solid yellow; */
   }
 
